Commit : Adding read me

--- a/Vineet_Tiwari.ipynb
+++ b/Vineet_Tiwari.ipynb
@@ -17,8 +17,7 @@
     "### End Goals\n",
     "\n",
     "- If the applicant is likely to repay the loan, then not approving the loan results in a loss of business to the company\n",
-    "- \r\n",
-    "If the applicant is not likely to repay the loan, i.e. he/she is likely to default, then approving the loan may lead to a financial loss for the company\n"
+    "- If the applicant is not likely to repay the loan, i.e. he/she is likely to default, then approving the loan may lead to a financial loss for the company\n"
    ]
   },
   {
@@ -28,10 +27,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Steps of analysis:\r\n",
-    "# 1. Data Understanding\r\n",
-    "# 2. DatCleaningng\r\n",
-    "# 3. Data Visualization and Analysis\r\n",
+    "# Steps of analysis:\n",
+    "# 1. Data Understanding\n",
+    "# 2. DatCleaningng\n",
+    "# 3. Data Visualization and Analysis\n",
     "# 4. Conclusion"
    ]
   },
